maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:24: error: Unit does not take parameters
      droite()()
              ^